--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-*.cpp
+"*.exe*.out*.obj*.o*.log*.tmp*.cache*.pdb*.ilk.vscode/.idea/.DS_Storebuild/cmake-build-*/~$**.lnkThumbs.dbDesktop.iniehthumbs.db$RECYCLE.BIN/*.user*.suo*.sdf*.opensdf*.VC.db" 
